--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "catalogo-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "type": "module",
   "author": "",
   "license": "ISC",
   "keywords": [],
   "scripts": {
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
